assets/styles/src/style.css
/* ... */
			.theme[data-proportion="tiny"] .theme--leader{
				cursor: default;
			}
			.theme .theme--content .theme--leader{
				border-bottom: 1px solid #000000;
			}
			.theme.theme__networks .theme--content .theme--leader{
				border-bottom: 1px solid #ffffff;
				padding-right: 3rem;
			}

			.theme .theme--leader h1{
				-webkit-backface-visibility: hidden;
				-webkit-perspective: 1000;
				-webkit-transform: translate3d(0,0,0);
				-webkit-transform: translateZ(0);
				backface-visibility: hidden;
				perspective: 1000;
				transform: translate3d(0,0,0);
				transform: translateZ(0);
				margin-bottom: 0;
				line-height: 1rem;
				white-space: nowrap;
				transition: filter .3s ease-in;
				overflow: hidden;
				text-overflow: ellipsis;
			}
				.theme .theme--leader h1 .editable+.original{
					display: none;
				}

		.theme .theme--leader h1.hovered,
		.theme.locked .theme--leader:hover h1.has-link{
			filter: blur(3px);
		}
			.theme[data-proportion="tiny"] .theme--leader h1.hovered,
			.theme[data-proportion="tiny"].locked .theme--leader:hover h1.has-link{
				filter: blur(0);
			}

		.theme .theme--follower{
			padding: 0.9em 1rem 10em 1.1rem;
		}
		/* SCROLLBAR HIDING */
		.theme:nth-child(2){
			z-index: 1; /*so that it covers the first-column's scrollbar*/
		}
		.theme .theme--follower{
			box-sizing: content-box;
			width:100%;
			padding: 0 0 0.01em 1rem;
		}
		.theme .theme--section {
			padding-right: 2rem;
		}
		.theme{
			overflow-y: hidden;
		}
		.theme-scroller-wrapper{
			overflow: hidden;
		}

@media (min-width: 721px){
	.theme{
		width: 50%;
		height: 100%;
		display: inline-block;
		box-sizing: border-box;
		overflow-x: hidden;
		overflow-y: hidden;
		position: relative;
		transform: translate3d(0,0,0);
	}
		.theme .theme--image-cover{
			display: block;
			position: absolute;
			top: 0;
			left: 0;
			height: 100%;
			transform: translate3d(0,0,0);
		}
		.theme .theme--content{
			position: relative;
			top: 92vh;
			top: calc( 100vh - 2.65rem );
			height: 85vh;
			height: calc( 100vh - 2.6rem );
			overflow: hidden;
			box-sizing: border-box;
		}
		.theme .theme--follower{
			height: 100%;
			min-height: 100vh;
		}
		.theme.locked{
			overflow-y: hidden;
		}
			.theme.locked .theme--content .theme--follower{
				overflow-y: scroll;
				overflow-x: hidden;
				transform: translate3d(0,0,0);
			}
			.theme.locked .theme--content .theme--follower ::-webkit-scrollbar{
				display: none;
			}

		/* SCROLLBAR HIDING */

	.theme-scroller-wrapper{
		position: relative;
		width: 100%;
		padding: 0;
		height: 100%;
		overflow-y: scroll;
	}
		.theme-scroller-wrapper::-webkit-scrollbar{
			display: none;
		}
		.theme.locked .theme--content .theme--follower::-webkit-scrollbar{
			display: none;
		}
		.theme-scroller-wrapper .theme--content{
			height: auto;
		}
		.theme.locked .theme-scroller-wrapper{
			overflow: hidden;
		}
			.theme.locked .theme--content{
				height: 100%;
				top: 0;
			}
			.theme--section:last-child{
				padding-bottom: 10rem;
			}
			.theme .theme--image-cover{
				-webkit-box-shadow: none;
				-moz-box-shadow: none;
				box-shadow: none;
			}
			.theme .theme--follower{
				padding-bottom: 10em;
			}

	.dc-scrollbar{
		width: 14px;
		position: absolute;
		top: 0;
		bottom: 0;
		left: 0;
	}
		.theme:nth-child(2) .dc-scrollbar{
			left: auto;
			right: 0
		}
		.theme:nth-child(2) .dc-scrollbar--handle{
			right: 0;
			left: auto;
		}
			.theme:nth-child(2) .dc-scrollbar--handle:after{
				background: #ffffff;
				right: 0;
			}
		.dc-scrollbar--handle{
			position: absolute;
			cursor: pointer;
			width: 9px;
			height: 18px;
			background: transparent;
			transform: translateY(1px);
			transition: width .2s, height .5s;
		}
			.dc-scrollbar--handle:after{
				position: absolute;
				display: block;
				content: '';
				width: 4px;
				height: 100%;
				background: #000000;
			}
		.theme.locked .dc-scrollbar{
			pointer-events: all;
			opacity: 1;
			z-index: 2;
			top: 2.8rem;
			bottom: 18px;
		}
			.theme.locked .dc-scrollbar--handle{
				height: 26px;
			}

			.dc-scrollbar:hover .dc-scrollbar--handle,
			.dc-scrollbar--handle:hover{
				height: 33px;
			}
				.dc-scrollbar:hover .dc-scrollbar--handle,
				.dc-scrollbar.mouse-near .dc-scrollbar--handle{
					opacity: 1;
				}
			.theme .dc-scrollbar{
				opacity: 0;
				pointer-events: none;
			}
				.theme .dc-scrollbar--handle{
					height: 5px;
				}
}
/* ... */

